force-app/main/default/objects/Subscription_Product__c/Subscription_Product__c.object-meta.xml
<CustomObject>
    <label>Subscription Product</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Subscription Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>