force-app/main/default/objects/Subscription_Product__c/fields/Default_Instances__c.field-meta.xml
<CustomField>
    <fullName>Default_Instances__c</fullName>
    <label>Default Instances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>